# shop-simulation

./: .gitignore  CMakeLists.txt  README.md  ShopSimulation
data/: counters.txt  info.txt  names.txt  products.txt  surnames.txt
src/: client.cpp  client.h  counter.cpp  counter.h  currency.cpp  currency.h  employee.cpp  employee.h  file_manager.cpp  file_manager.h  main.cpp  person.cpp  person.h  product.cpp  product.h  random.cpp  random.h  regular_client.cpp  regular_client.h  shop.cpp  shop.h
src/exceptions/: client_does_not_exist_exception.cpp  client_does_not_exist_exception.h  client_exists_exception.cpp  client_exists_exception.h  custom_exception.h  employee_does_not_exist_exception.cpp  employee_does_not_exist_exception.h  employee_exists_exception.cpp  employee_exists_exception.h  file_opening_exception.cpp  file_opening_exception.h  greater_money_substraction_exception.cpp  greater_money_substraction_exception.h  no_active_counter_exception.cpp  no_active_counter_exception.h  not_enough_counters_exception.cpp  not_enough_counters_exception.h  product_does_not_exist_exception.cpp  product_does_not_exist_exception.h  product_exists_exception.cpp  product_exists_exception.h  wrong_data_from_file_exception.cpp  wrong_data_from_file_exception.h
src/interfaces/: counter_interface.cpp  counter_interface.h  currency_interface.cpp  currency_interface.h  file_manager_interface.cpp  file_manager_interface.h  person_interface.cpp  person_interface.h  product_interface.cpp  product_interface.h  random_interface.cpp  random_interface.h  (+2 more)
tests/: test.txt  tests.cpp
